<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAdmin">
    <EditText
        android:id="@+id/editText_usuarioAdmin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:autoText="false"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_contraseñaAdmin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_usuarioAdmin" />

    <TextView
        android:id="@+id/etiquetaLoginAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/etiqueta_modo_admin"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etiquetaUsuarioAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="20dp"
        android:text="@string/etiqueta_usuario"
        app:layout_constraintEnd_toStartOf="@+id/editText_usuarioAdmin"
        app:layout_constraintTop_toBottomOf="@+id/etiquetaLoginAdmin" />

    <TextView
        android:id="@+id/etiquetaContraseñaAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:text="@string/etiqueta_contraseña"
        app:layout_constraintEnd_toStartOf="@+id/editText_contraseñaAdmin"
        app:layout_constraintTop_toBottomOf="@+id/etiquetaUsuarioAdmin" />

    <Button
        android:id="@+id/botonLoginAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="entrarAdmin"
        android:text="@string/boton_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_contraseñaAdmin" />
</androidx.constraintlayout.widget.ConstraintLayout>